# TensorRT-LLM

./: .bazelrc  AGENTS.md  BUILD.bazel  MODULE.bazel  ad-perf-analysis-plan.md  apr10.md  bazel_impl_test_plan.md  bazel_native_build.md  conf1.yaml  conf2.yaml  config.yaml  config_nested.yaml  config_nested_custom.yaml  debug_accuracy.py  editable_install.sh  gemma4_megakernel_a_plan.md  gemma4_moe_optimization_notes.md  gemma4moe_canonical_ir_v1.md  gemma_mpk_mapping_rationale.md  gemma_mpk_translator_design.md  gemma_mpk_translator_plan.md  intra_bucket_finalize_plan.md  mirage_onboarding_skill.md  mpk_deep_dive.md  mpk_v1_transform_proposal.md  mpk_workflow_and_compile_profile.md  reduced_config_gemma4.yaml  requirements.txt  requirements_bazel_lock.txt  results.tsv  results_gemma4.tsv  setup.py  test_allreduce_hypothesis.py  test_conf.py  test_summation_order.py  worklog.md
ci/bazel/: BUILD.bazel  README.md  defs.bzl  pytest_selector_test.sh
ci/bazel/autodeploy/: BUILD.bazel
cpp/: BUILD.bazel
cpp/bazel/: commonHostSmokeTest.cpp  timestampUtilsSmokeTest.cpp
cpp/tensorrt_llm/kernels/cutlass_kernels/include/: moe_kernels.h
cpp/tensorrt_llm/kernels/cutlass_kernels/moe_gemm/: moe_kernels.cu
cpp/tensorrt_llm/kernels/cutlass_kernels/python/: generate_kernels.py
cpp/tensorrt_llm/kernels/fusedLayernormKernels/: fused_add_rms_norm_fp8.cu  fused_add_rms_norm_fp8.h  layernorm_param.h
cpp/tensorrt_llm/thop/: fusedAddRMSNormQuant.cpp
scripts/ci_target_graph/: BUILD.bazel  README.md  __init__.py  generate.py  generate_bazel_autodeploy.py  generate_bazel_autodeploy_main.py  generate_main.py  manifest_schema_v1.json  manifest_schema_v2.json  select_impacted.py  select_impacted_main.py  selector_parser.py  validate.py
tensorrt_llm/_torch/auto_deploy/: BUILD.bazel  llm.py  llm_args.py
tensorrt_llm/_torch/auto_deploy/compile/: compiler.py  piecewise_runner.py  piecewise_utils.py
tensorrt_llm/_torch/auto_deploy/compile/backends/: torch_compile.py  torch_cudagraph.py
tensorrt_llm/_torch/auto_deploy/config/: default.yaml
tensorrt_llm/_torch/auto_deploy/custom_ops/: KERNEL_OPTIMIZATION_GUIDE.md  README.md  __init__.py  _triton_attention_internal.py  attention_interface.py  cuda_backend_causal_conv.py  dist.py  flashinfer_attention.py  flashinfer_rope.py  fused_moe.py  linear.py  matmul.py  mul.py  multi_stream.py  noop_rope_passthrough.py  quant.py  qwen_ops.py  rms_norm.py  sharding_ops.py  softmax.py  torch_attention.py  torch_backend_attention.py  torch_backend_causal_conv.py  torch_backend_mamba.py  torch_dist.py  torch_gather_logits.py  torch_mamba.py  torch_moe.py  torch_quant.py  triton_attention.py  triton_backend_mamba.py  triton_moe.py  trtllm_dist.py  trtllm_moe.py
tensorrt_llm/_torch/auto_deploy/custom_ops/agent_ops/: load_moe.py  moe_op_grouped.cu
tensorrt_llm/_torch/auto_deploy/custom_ops/attention/: __init__.py  bench_triton_paged_attention.py  benchmark_gemma_kernel_a_decode.py  flashinfer_attention.py  sweep_triton_paged_attention.py  torch_attention.py  torch_backend_attention.py  triton_attention.py  triton_gemma_kernel_a_decode.py  triton_paged_attention.py  triton_paged_attention_opt.md  trtllm_attention.py
tensorrt_llm/_torch/auto_deploy/custom_ops/benchmarks/: __init__.py  bench_fp8_linear.py  bench_fused_add_rms_norm.py  bench_gated_rms_norm.py  bench_l2_norm.py  bench_moe.py  bench_rms_norm.py  bench_rope.py  bench_utils.py
tensorrt_llm/_torch/auto_deploy/custom_ops/delta_rule/: fla_backend_gated_delta.py  flashinfer_backend_gated_delta.py  gdn_decode.py  torch_backend_gated_delta.py  torch_gated_delta_rule.py
tensorrt_llm/_torch/auto_deploy/custom_ops/distributed/: trtllm_dist.py
tensorrt_llm/_torch/auto_deploy/custom_ops/fla/: fla_backend_delta.py  fla_backend_gated_delta.py  fla_gated_delta.py  torch_backend_gated_delta.py  triton_fused_sigmoid_mul.py
tensorrt_llm/_torch/auto_deploy/custom_ops/fused_moe/: bench_triton_moe_dense_mlp.py  flashinfer_moe.py  mxfp4_moe.py  sweep_block_h.py  sweep_triton_moe_dense_mlp.py  torch_moe.py  triton_moe.py  triton_moe_dense_mlp.py  triton_moe_dense_mlp_opt.md  triton_routing.py  trtllm_moe.py
tensorrt_llm/_torch/auto_deploy/custom_ops/linear/: __init__.py  bf16_gemv.py  linear.py
tensorrt_llm/_torch/auto_deploy/custom_ops/mamba/: causal_conv_common.py  cuda_backend_causal_conv.py  flashinfer_backend_mamba.py  fused_cached_conv_ssm.py  fused_mamba_decode.py  fused_mamba_decode_opt.md  mamba_backend_common.py  sweep_fused_mamba_decode.py  sweep_tuned_ssm_kernel.py  torch_backend_causal_conv.py  torch_backend_mamba.py  torch_backend_mamba_v1.py  torch_causal_conv.py  torch_mamba.py  torch_mamba_v1.py  triton_backend_mamba.py  (+4 more)
tensorrt_llm/_torch/auto_deploy/distributed/: common.py  trtllm.py
tensorrt_llm/_torch/auto_deploy/export/: export.py  interface.py
tensorrt_llm/_torch/auto_deploy/models/: __init__.py  decilm.py  deepseek.py  eagle.py  eagle_one_model.py  factory.py  hf.py  llama4.py  mistral3.py  modeling_speculative.py  phi.py  quant_config_reader.py
tensorrt_llm/_torch/auto_deploy/mpk/: __init__.py  buffer_planner.py  gemma_analyzer.py  gemma_layer_lowering.py  mirage_bridge.py  runtime_wrapper.py  translator.py  types.py
tensorrt_llm/_torch/auto_deploy/shim/: ad_executor.py  demollm.py  interface.py
tensorrt_llm/_torch/auto_deploy/transform/: interface.py  optimizer.py  semantic_mask_registry.py
tensorrt_llm/_torch/auto_deploy/transformations/: _graph.py  export.py  interface.py  transform.py
tensorrt_llm/_torch/auto_deploy/utils/: _config.py  _graph.py  cuda_mem_tracker.py  debug_utils.py  dist_config.py  graph_debug_compare.py  logger.py  mapping_utils.py  multi_stream_utils.py  node_utils.py  pattern_matcher.py  pattern_matcher_utils.py  quantization_utils.py  sequence_metadata_utils.py  sharding_utils.py
tests/unittest/tools/: BUILD.bazel  test_ad_perf_analysis.py  test_bazel_smoke.py  test_ci_target_graph.py
tools/bazel/: BUILD.bazel  cmake_artifacts.bzl  pytest_selector_runner.py  system_deps.bzl  triton_backend.bzl  wheel.bzl
triton_backend/: BUILD.bazel
(+445 files in other folders)
