# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

exports_files(
    ["requirements_bazel_lock.txt"],
    visibility = ["//visibility:public"],
)

# Metadata-only placeholder for query-time artifact modeling.
filegroup(
    name = "tensorrt_llm_wheel",
    srcs = [
        "pyproject.toml",
        "setup.py",
        "//cpp:wheel_native_artifacts",
    ],
    visibility = ["//visibility:public"],
)
