# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("//tools/bazel:triton_backend.bzl", "triton_tensorrt_llm_backend")

package(default_visibility = ["//visibility:public"])

TRITON_TENSORRT_LLM_BACKEND_SRCS = glob(
    ["inflight_batcher_llm/**"],
    exclude = [
        "inflight_batcher_llm/bazel-*/**",
        "inflight_batcher_llm/build/**",
        "inflight_batcher_llm/build_*/**",
        "inflight_batcher_llm/cmake-build-*/**",
    ],
)

filegroup(
    name = "triton_tensorrt_llm_backend_sources",
    srcs = TRITON_TENSORRT_LLM_BACKEND_SRCS,
)

triton_tensorrt_llm_backend(
    name = "triton_tensorrt_llm_backend",
    srcs = TRITON_TENSORRT_LLM_BACKEND_SRCS,
    decoder_attention_0 = "//cpp:decoder_attention_0",
    decoder_attention_1 = "//cpp:decoder_attention_1",
    executor_worker = "//cpp:executor_worker",
    libtensorrt_llm = "//cpp:libtensorrt_llm",
    nvinfer_plugin_tensorrt_llm = "//cpp:nvinfer_plugin_tensorrt_llm",
    pg_utils = "//cpp:pg_utils",
    tags = [
        "manual",
        "local",
        "no-cache",
        "no-remote",
        "no-remote-cache",
        "no-remote-exec",
        "no-sandbox",
    ],
    trtllm_srcs = ["//cpp:cmake_artifact_sources"],
)

filegroup(
    name = "triton_backend_artifacts",
    srcs = [
        ":triton_tensorrt_llm_backend",
    ],
)
