# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

package(default_visibility = ["//visibility:public"])

py_library(
    name = "ci_target_graph_lib",
    srcs = [
        "__init__.py",
        "generate.py",
        "generate_bazel_autodeploy.py",
        "select_impacted.py",
        "selector_parser.py",
        "validate.py",
    ],
    deps = [
        "@pip//pyyaml",
    ],
)

py_binary(
    name = "generate",
    srcs = ["generate_main.py"],
    main = "generate_main.py",
    deps = [
        ":ci_target_graph_lib",
    ],
)

py_binary(
    name = "generate_bazel_autodeploy",
    srcs = ["generate_bazel_autodeploy_main.py"],
    main = "generate_bazel_autodeploy_main.py",
    deps = [
        ":ci_target_graph_lib",
    ],
)

py_binary(
    name = "select_impacted",
    srcs = ["select_impacted_main.py"],
    main = "select_impacted_main.py",
    deps = [
        ":ci_target_graph_lib",
    ],
)
