# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("//ci/bazel:defs.bzl", "trtllm_pytest_case")

package(default_visibility = ["//visibility:public"])

_AUTODEPLOY_H100_TAGS = [
    "backend:autodeploy",
    "gpu:h100",
    "requires:cuda",
    "requires:model_cache",
]

_H100_COMPATIBILITY = ["//platforms/gpu:h100"]
_ONE_GPU_COMPATIBILITY = ["//platforms/gpu_count:one"]
_FOUR_GPU_COMPATIBILITY = ["//platforms/gpu_count:four"]

trtllm_pytest_case(
    name = "llama31_trtllm_1gpu_h100",
    selector = "accuracy/test_llm_api_autodeploy.py::TestLlama3_1_8B::test_auto_dtype[trtllm-False-1]",
    tags = _AUTODEPLOY_H100_TAGS + ["gpu_count:1"],
    target_compatible_with = _H100_COMPATIBILITY + _ONE_GPU_COMPATIBILITY,
)

trtllm_pytest_case(
    name = "llama31_trtllm_4gpu_h100",
    selector = "accuracy/test_llm_api_autodeploy.py::TestLlama3_1_8B::test_auto_dtype[trtllm-False-4]",
    tags = _AUTODEPLOY_H100_TAGS + ["gpu_count:4"],
    target_compatible_with = _H100_COMPATIBILITY + _FOUR_GPU_COMPATIBILITY,
)

trtllm_pytest_case(
    name = "llama31_attention_dp_4gpu_h100",
    selector = "accuracy/test_llm_api_autodeploy.py::TestLlama3_1_8B::test_attention_dp[4]",
    tags = _AUTODEPLOY_H100_TAGS + ["gpu_count:4"],
    target_compatible_with = _H100_COMPATIBILITY + _FOUR_GPU_COMPATIBILITY,
)

test_suite(
    name = "autodeploy_h100_4gpu",
    tags = ["manual"],
    tests = [
        ":llama31_trtllm_4gpu_h100",
        ":llama31_attention_dp_4gpu_h100",
    ],
)

test_suite(
    name = "autodeploy_h100_seed",
    tags = ["manual"],
    tests = [
        ":llama31_trtllm_1gpu_h100",
        ":llama31_trtllm_4gpu_h100",
        ":llama31_attention_dp_4gpu_h100",
    ],
)
