# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("//ci/bazel:defs.bzl", "trtllm_pytest_case")

package(default_visibility = ["//visibility:public"])

_AUTODEPLOY_H100_TAGS = [
    "backend:autodeploy",
    "gpu:h100",
    "requires:cuda",
    "requires:model_cache",
]

_H100_COMPATIBILITY = ["//platforms/gpu:h100"]
_ONE_GPU_COMPATIBILITY = ["//platforms/gpu_count:one"]
_FOUR_GPU_COMPATIBILITY = ["//platforms/gpu_count:four"]
_AUTODEPLOY_H100_ACCURACY_DEPS = [
    "//:tensorrt_llm_wheel_metadata",
    "//cpp:cuda_kernels_metadata",
    "//cpp:nvinfer_plugin_tensorrt_llm_metadata",
    "//cpp:tensorrt_llm_bindings_metadata",
    "//tensorrt_llm/_torch/auto_deploy:runtime",
    "//tests/integration/defs/accuracy:accuracy_tests",
]

# Hand-written seed examples are kept as a small macro and compatibility smoke set.
# Manifest-derived coverage lives under //ci/bazel/autodeploy/generated.

trtllm_pytest_case(
    name = "llama31_trtllm_1gpu_h100",
    selector = "accuracy/test_llm_api_autodeploy.py::TestLlama3_1_8B::test_auto_dtype[trtllm-False-1]",
    tags = _AUTODEPLOY_H100_TAGS + ["gpu_count:1"],
    target_compatible_with = _H100_COMPATIBILITY + _ONE_GPU_COMPATIBILITY,
    deps = _AUTODEPLOY_H100_ACCURACY_DEPS,
)

trtllm_pytest_case(
    name = "llama31_trtllm_4gpu_h100",
    selector = "accuracy/test_llm_api_autodeploy.py::TestLlama3_1_8B::test_auto_dtype[trtllm-False-4]",
    tags = _AUTODEPLOY_H100_TAGS + ["gpu_count:4"],
    target_compatible_with = _H100_COMPATIBILITY + _FOUR_GPU_COMPATIBILITY,
    deps = _AUTODEPLOY_H100_ACCURACY_DEPS,
)

trtllm_pytest_case(
    name = "llama31_attention_dp_4gpu_h100",
    selector = "accuracy/test_llm_api_autodeploy.py::TestLlama3_1_8B::test_attention_dp[4]",
    tags = _AUTODEPLOY_H100_TAGS + ["gpu_count:4"],
    target_compatible_with = _H100_COMPATIBILITY + _FOUR_GPU_COMPATIBILITY,
    deps = _AUTODEPLOY_H100_ACCURACY_DEPS,
)

test_suite(
    name = "autodeploy_h100_4gpu",
    tags = ["manual"],
    tests = [
        ":llama31_trtllm_4gpu_h100",
        ":llama31_attention_dp_4gpu_h100",
    ],
)

test_suite(
    name = "autodeploy_h100_seed",
    tags = ["manual"],
    tests = [
        ":llama31_trtllm_1gpu_h100",
        ":llama31_trtllm_4gpu_h100",
        ":llama31_attention_dp_4gpu_h100",
    ],
)

test_suite(
    name = "autodeploy_h100_generated",
    tags = ["manual"],
    tests = ["//ci/bazel/autodeploy/generated:autodeploy_h100_generated"],
)
