# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

package(default_visibility = ["//visibility:public"])

py_library(
    name = "runtime",
    srcs = glob(["**/*.py"]),
)

filegroup(
    name = "wheel_package_sources",
    srcs = glob(
        [
            "**/*.cu",
            "**/*.json",
            "**/*.py",
            "**/*.yaml",
            "**/*.yml",
        ],
        exclude = [
            "**/__pycache__/**",
        ],
        allow_empty = True,
    ),
)
