# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

py_test(
    name = "ci_target_graph_test",
    srcs = ["//tools/bazel:pytest_selector_runner.py"],
    args = [
        "--selector",
        "tests/unittest/tools/test_ci_target_graph.py",
        "--repo-root",
        ".",
        "--pytest-arg=-q",
        "--pytest-arg=-p",
        "--pytest-arg=no:cacheprovider",
    ],
    data = [
        "test_ci_target_graph.py",
    ] + glob(["fixtures/ci_target_graph/**"]),
    main = "//tools/bazel:pytest_selector_runner.py",
    deps = [
        "//scripts/ci_target_graph:ci_target_graph_lib",
        "@pip//pytest",
    ],
)
